[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/levels/level_1.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game.gd" type="Script" id=2]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/button_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/dogicapixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sfx/8 Bit Think! Calm Puzzle Game Music by HeatleyBros.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=6]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/fade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_end"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/fade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/VBoxContainer2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/VBoxContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/VBoxContainer/message:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/VBoxContainer/message:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_next"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/VBoxContainer/buttons/next_level:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/VBoxContainer/buttons/next_level:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/VBoxContainer/buttons/next_level:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_restart"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/VBoxContainer/buttons/restart_level:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/VBoxContainer/buttons/restart_level:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/VBoxContainer/buttons/restart_level:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "buttons"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/VBoxContainer/buttons/restart_level:custom_fonts/font")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), SubResource( 1 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/VBoxContainer/buttons/next_level:custom_fonts/font")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), SubResource( 1 ), ExtResource( 4 ) ]
}

[node name="game" type="Node2D"]
script = ExtResource( 2 )

[node name="level" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.5
margin_top = -20.0
margin_right = 248.5
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="CanvasLayer/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.25 )
margin_right = 497.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Witam serdecznie ale nie"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Control" parent="CanvasLayer/VBoxContainer"]
margin_left = 248.0
margin_right = 248.0
size_flags_horizontal = 4

[node name="restart_level" type="Button" parent="CanvasLayer/VBoxContainer/buttons"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -13.0
margin_right = 82.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.203922, 0.254902, 0.203922, 1 )
custom_colors/font_color = Color( 0.180392, 0.643137, 0.188235, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.780392, 0.145098, 1 )
custom_colors/font_color_pressed = Color( 0.403922, 1, 0.411765, 1 )
disabled = true
enabled_focus_mode = 0
text = "Restart Level"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_level" type="Button" parent="CanvasLayer/VBoxContainer/buttons"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -13.0
margin_right = 82.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.203922, 0.254902, 0.203922, 1 )
custom_colors/font_color = Color( 0.180392, 0.643137, 0.188235, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.780392, 0.145098, 1 )
custom_colors/font_color_pressed = Color( 0.403922, 1, 0.411765, 1 )
enabled_focus_mode = 0
text = "Next Level"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fade" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.142857 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.142857 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 77.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer2"]
margin_right = 900.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "That was the last level. Hope you liked that cursed grass xP. Thanks for playing."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer2"]
margin_top = 63.0
margin_right = 900.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.243137, 0.717647, 0.4, 1 )
text = "Made by michalflog"
align = 1
valign = 1

[node name="fade_animation" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 6 )
anims/fade_end = SubResource( 7 )

[node name="message_animation" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 5 )

[node name="button_animation" type="AnimationPlayer" parent="."]
anims/fade_next = SubResource( 4 )
anims/fade_restart = SubResource( 2 )

[node name="button_const_animation" type="AnimationPlayer" parent="."]
anims/buttons = SubResource( 3 )

[node name="main_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0
autoplay = true
[connection signal="pressed" from="CanvasLayer/VBoxContainer/buttons/restart_level" to="." method="restart_level"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/buttons/next_level" to="." method="next_level"]
